feat: overhaul auth admin and movie workflows
Add Kakao login, session tracking, and login attempt handling.

Refresh admin/report flows, TMDB-backed movie pages, SQL scripts, and presentation docs.