@@ -1,5 +1,6 @@
-﻿package com.spring.springGreen8.controller;
+package com.spring.springGreen8.controller;
 
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -13,7 +14,7 @@ import org.springframework.web.bind.annotation.RequestMethod;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.ResponseBody;
 
-import com.spring.springGreen8.dao.NotificationDAO;
+import com.spring.springGreen8.service.NotificationService;
 import com.spring.springGreen8.vo.NotificationVO;
 import com.spring.springGreen8.vo.UserVO;
 
@@ -22,7 +23,7 @@ import com.spring.springGreen8.vo.UserVO;
 public class NotificationController {
 
     @Autowired
-    private NotificationDAO notificationDAO;
+    private NotificationService notificationService;
 
     @RequestMapping(value = "/count", method = RequestMethod.GET,
                     produces = "application/json; charset=utf-8")
@@ -34,7 +35,7 @@ public class NotificationController {
             result.put("count", 0);
             return result;
         }
-        result.put("count", notificationDAO.countUnread(loginUser.getUserId()));
+        result.put("count", notificationService.countUnread(loginUser.getUserId()));
         return result;
     }
 
@@ -43,8 +44,49 @@ public class NotificationController {
     @ResponseBody
     public List<NotificationVO> getList(HttpSession session) {
         UserVO loginUser = (UserVO) session.getAttribute("loginUser");
-        if (loginUser == null) return List.of();
-        return notificationDAO.selectMyNotifications(loginUser.getUserId());
+        if (loginUser == null) return Collections.emptyList();
+        return notificationService.getMyNotifications(loginUser.getUserId());
+    }
+
+    /**
+     * 알림 클릭 시 진입점. 소유권 검증 → 읽음 처리 → 관련 페이지로 리다이렉트.
+     * refId는 알림 생성 시 기록한 TMDB id(영화 상세) 또는 report_id(관리자만 의미).
+     */
+    @RequestMapping(value = "/open", method = RequestMethod.GET)
+    public String openNotification(@RequestParam int notiId, HttpSession session) {
+        UserVO loginUser = (UserVO) session.getAttribute("loginUser");
+        if (loginUser == null) return "redirect:/user/login";
+
+        NotificationVO notification =
+                notificationService.getNotification(notiId, loginUser.getUserId());
+        if (notification == null) return "redirect:/user/mypage";
+
+        notificationService.markAsRead(notiId, loginUser.getUserId());
+        return "redirect:" + resolveRedirectPath(notification);
+    }
+
+    /**
+     * 알림 타입/참조값에 따른 목적지 URL 결정.
+     * - COMMENT / LIKE / REVIEW: refId를 TMDB id로 보고 영화 상세 페이지로 이동
+     * - REPORT : 신고 처리 결과 알림 → 마이페이지로 이동 (신고 이력 화면이 별도로 없으므로)
+     * - 그 외/비정상값 : 마이페이지로 안전 폴백
+     */
+    private String resolveRedirectPath(NotificationVO notification) {
+        String type = notification.getNotiType();
+        int refId = notification.getRefId();
+        if (type == null) return "/user/mypage";
+
+        if ("COMMENT".equalsIgnoreCase(type)
+                || "LIKE".equalsIgnoreCase(type)
+                || "REVIEW".equalsIgnoreCase(type)) {
+            if (refId > 0) {
+                return "/movie/detail/" + refId;
+            }
+            return "/user/mypage";
+        }
+
+        // REPORT 등은 안전 폴백
+        return "/user/mypage";
     }
 
     @RequestMapping(value = "/read", method = RequestMethod.POST,
@@ -58,7 +100,7 @@ public class NotificationController {
             return result;
         }
 
-        int updated = notificationDAO.markAsRead(notiId, loginUser.getUserId());
+        int updated = notificationService.markAsRead(notiId, loginUser.getUserId());
         result.put("status", updated > 0 ? "ok" : "fail");
         return result;
     }
@@ -73,7 +115,7 @@ public class NotificationController {
             result.put("status", "fail");
             return result;
         }
-        notificationDAO.markAllAsRead(loginUser.getUserId());
+        notificationService.markAllAsRead(loginUser.getUserId());
         result.put("status", "ok");
         return result;
     }
